--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.52.2",
-    "firebase": "^10.13.0",
     "next": "14.2.6",
+    "next-auth": "5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18"
   },
