chore: add title

--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "next-app",
+  "name": "yanglee2421.vercel.app.git",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https:yanglee2421.vercel.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yanglee2421/yanglee2421.vercel.app.git",
+    "directory": "/"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
