--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "yanglee2421.vercel.app.git",
+  "name": "yanglee2421.vercel.app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https:yanglee2421.vercel.app",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yanglee2421/yanglee2421.vercel.app.git",
-    "directory": "/"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,27 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.0.1",
-    "@mui/material": "^6.0.1",
-    "@mui/material-nextjs": "^6.0.1",
-    "@tanstack/react-query": "^5.53.1",
-    "@tanstack/react-query-devtools": "^5.53.1",
-    "@toolpad/core": "^0.5.2",
-    "next": "14.2.6",
-    "next-auth": "5.0.0-beta.20",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.14"
   },
   "devDependencies": {
-    "@types/node": "^20.16.2",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.6",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14"
   },
-  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
 }
