feat: locale path

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@yotulee/run": "npm:@jsr/yotulee__run@^0.0.6",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
