feat: add immer to zustand store

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@yotulee/run": "npm:@jsr/yotulee__run@^0.0.6",
+    "immer": "^10.1.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "use-immer": "^0.10.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
