--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@yotulee/run": "npm:@jsr/yotulee__run@^0.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "lucide-react": "^0.456.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "use-immer": "^0.10.0",
     "zustand": "^5.0.1"
   },
