style: Sort out code

--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -13,7 +13,8 @@ insertPragma: false
 jsxSingleQuote: false
 objectWrap: "preserve"
 # parser: null
-plugins: []
+plugins:
+  - "prettier-plugin-tailwindcss"
 printWidth: 80
 proseWrap: "preserve"
 quoteProps: "as-needed"
