--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "16.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
