--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
+    "modbus-serial": "^8.0.23",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
