--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
-    "modbus-serial": "^8.0.23",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "serialport": "^13.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -33,5 +33,5 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
+  "packageManager": "pnpm@10.23.0+sha512.21c4e5698002ade97e4efe8b8b4a89a8de3c85a37919f957e7a0f30f38fbc5bbdd05980ffe29179b2fb6e6e691242e098d945d1601772cad0fef5fb6411e2a4b"
 }
