refactor: migrate modbus to serialport

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
+    "node-fxplc": "^0.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "serialport": "^13.0.0",
